alteração da imagem de perfil

--- a/Portifólio/index.html
+++ b/Portifólio/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark px-4 fixed-top shadow" id="sideNav">
             <span class="d-none d-lg-block">
-                <img src="images/avatar.jpg" class="rounded-circle img-profile" alt="Samuel">
+                <img src="images/WhatsApp Image 2021-05-21 at 09.34.17.jpeg" class="rounded-circle img-profile" alt="Samuel">
             </span>
             <a class="navbar-brand" href="#">Samuel Nunes de Souza</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
