--- a/Site Bootstrap 2/index.html
+++ b/Site Bootstrap 2/index.html
@@ -12,30 +12,30 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#">INFUSION</a>
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-0 shadow">
+                <a class="navbar-brand col-3 text-light py-3 px-4" href="#"><strong>Infusion</strong></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav mr-auto">
+                  <ul class="navbar-nav mr-auto text-center">
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Design Folio</a>
+                      <a class="nav-link d-block py-2 px-4" href="#">Design Folio</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Services</a>
+                      <a class="nav-link d-block py-2 px-4" href="#">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Our Business</a>
+                        <a class="nav-link d-block py-2 px-4" href="#">Our Business</a>
                       </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">How We Help</a>
+                      <a class="nav-link d-block py-2 px-4" href="#">How We Help</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Take the Tour</a>
+                        <a class="nav-link d-block py-2 px-4" href="#">Take the Tour</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link d-block py-2 px-4" href="#">Contact</a>
                     </li>
                   </ul>
             </div>
@@ -43,23 +43,55 @@
     </header>
     <main>
         <section>
-            <div class="jumbotron jumbotron-fluid">
+            <div class="jumbotron jumbotron-fluid d-md-none">
                 <div class="container">
-                  <h1 class="display-4">Cutting Edge <abbr title="Wordpress">WP</abbr> business theme</h1>
-                  <p class="lead">Gutful of bottlono drama he's got a massive hooroo.</p>
+                  <h2 class="">Cutting Edge <abbr title="Wordpress">WP</abbr> business theme</h2>
+                  <p class="">Gutful of bottlono drama he's got a massive hooroo.</p>
                   <a href="#" class="btn btn-primary btn-lg">Buy it now!</a>
                 </div>
             </div>
-            <div class="jumbotron jumbotron-fluid">
+            <div class="jumbotron jumbotron-fluid d-md-none">
                 <div class="container">
-                  <h1 class="display-4">Very photo, such waves, wow.</h1>
-                  <p class="lead">A very artsy photo with waves crashing over rocks. So /emosh...</p>
+                  <h2 class="">Very photo, such waves, wow.</h2>
+                  <p class="">A very artsy photo with waves crashing over rocks. So /emosh...</p>
                   <a href="#" class="btn btn-primary btn-lg">Beer me!</a>
                 </div>
             </div>
         </section>
+        <section>
+          <div id="carouselExampleIndicators" class="carousel slide d-none d-lg-block shadow" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class=""></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="carousel-img d-block w-100" src="img/01.jpg" alt="First slide">
+                  <div class="carousel-caption d-none d-md-block mb-5">
+                    <h5>Cutting Edge <abbr title="Wordpress">WP</abbr> business theme</h5>
+                    <p>Gutful of bottlono drama he's got a massive hooroo.</p>
+                    <a href="#" class="btn-carousel">Buy it now!</a>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                <img class="carousel-img d-block w-100" src="img/02.jpg" alt="Second slide">
+                  <div class="carousel-caption d-none d-md-block mb-5">
+                    <h5>Very photo, such waves, wow.</h5>
+                    <p>A very artsy photo with waves crashing over rocks. So /emosh...</p>
+                    <a href="#" class="btn-carousel">Beer me!</a>
+                  </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            </a>
+          </div>
+        </section>
         <section class="container">
-            <article class="row">
+            <article class="row my-4">
                 <div class="card col-10 col-lg-3 col-md-5">
                     <img class="card-img-top" src="img/c01.jpg" alt="Card image cap">
                     <div class="card-body">
@@ -100,7 +132,7 @@
                     <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate pariatur in doloremque necessitatibus magni consequatur?</h2>
                     <p>Ipsum, nostrum corporis provident, cumque numquam eos et natus neque amet fugit enim cum molestiae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur esse, veniam, aliquam voluptas repellendus maxime hic culpa quis excepturi eum minus quo deleniti laborum qui blanditiis iste vero quia est?</p>
                     <a href="#" class="btn btn-primary">BUTTON</a>
-                    <a href="#" class="btn btn-secundary">BUTTON</a>
+                    <a href="#" class="btn btn-secondary">BUTTON</a>
                 </div>
                 <div class="col-6">
                     <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate pariatur in doloremque necessitatibus magni consequatur?</h2>
