ajustes na responsividade do footer

--- a/Site Bootstrap 2/index.html
+++ b/Site Bootstrap 2/index.html
@@ -193,16 +193,16 @@
         <footer class="container-fluid bg-dark">
             <div class="container text-light">
               <div class="row py-5 rodape">
-                  <div class="col-2">
+                  <div class="col-12 col-md-2">
                       <p>Infusion</p>
                   </div>
-                  <div class="col-5">
+                  <div class="col-12 col-md-5">
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi eum possimus in nam similique facere laborum molestias ipsa nisi? Nemo cupiditate consectetur minima ipsum debitis dicta magni laudantium, porro asperiores! Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum autem, omnis laborum ab adipisci culpa distinctio sit tempore sed suscipit ipsam quasi placeat modi unde eius harum cumque eos earum?</p>
                   </div>
-                  <div class="col-3">
+                  <div class="col-12 col-md-3">
                       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum vel nisi amet quod architecto nulla quia, incidunt eaque harum, consequuntur consequatur quisquam dolore nobis odio maxime nostrum cumque hic rerum.</p>
                   </div>
-                  <div class="col-2">
+                  <div class="col-12 col-md-2">
                       <ul>
                           <li><a class="footer-links" href="#">List one</a></li>
                           <li><a class="footer-links" href="#">Page two</a></li>
