finalização do projeto manual

--- a/jquery/aula08.html
+++ b/jquery/aula08.html
@@ -113,6 +113,7 @@
         })
         
         $('#text').on('keyup', function(e){
+			console.log($(this).val())
             $('#textoDigitado').text($(this).val())
         })
         
