Section de vantagens e assinantes concluidas

--- a/jquery/Site Bootstrap-Jquery/index.html
+++ b/jquery/Site Bootstrap-Jquery/index.html
@@ -103,17 +103,17 @@
               <a class="col-4">
                 <h4 class="text-center">Atendimento</h4>
                 <img src="images/img_1.png" alt="imagem do atendimento" class="img">
-                <span class="saiba-mais bg-dark text-light border p-2 rounded">Saiba mais</span>
+                <span type="button" class="saiba-mais bg-dark text-light border p-2 rounded">Saiba mais</span>
               </a>
               <a class="col-4">
                 <h4 class="text-center">SCRUM</h4>
                 <img src="images/img_2.png" alt="imagem do excel" class="img">
-                <span class="saiba-mais bg-dark text-light border p-2 rounded">Saiba mais</span>
+                <span type="button" class="saiba-mais bg-dark text-light border p-2 rounded">Saiba mais</span>
               </a>
               <a class="col-4">
                 <h4 class="text-center">Excel</h4>
                 <img src="images/img_3.png" alt="imagem de evolução" class="img mt-2">
-                <span class="saiba-mais bg-dark text-light border p-2 rounded">Saiba mais</span>
+                <span type="button" class="saiba-mais bg-dark text-light border p-2 rounded">Saiba mais</span>
               </a>
             </div>
           </div>
@@ -126,43 +126,68 @@
       <article class="row justify-content-center">
         <div class="card mx-3" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title text-center">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div>
-        <div class="card mx-3" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title text-center">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title text-center">
+              <div class="fs-2 mb-3">
+                <img height="60px" src="images/foguete.png" alt="imagem de um foguete">
+              </div>
+            </h5>
+            <p class="card-text">Equipe voltada para o desenvolvimento dos treinantes.</p>
           </div>
         </div>
         <div class="card mx-3" style="width: 18rem;">
           <div class="card-body">
             <h5 class="card-title text-center">
-
+              <img height="60px" src="images/target.png" alt="imagem de um alvo">
             </h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Foco total nas metas e objetivos.</p>
+          </div>
+        </div>
+        <div class="card mx-3" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title text-center">
+              <img height="60px" src="images/suporte.png" alt="imagem de um robo" class="rounded-circle">
+            </h5>
+            <p class="card-text">Suporte diponível fulltime, pronto para qualquer tipo de possiveis problemas!</p>
           </div>
         </div>
       </article>
       <article class="row mt-3 justify-content-center">
         <div class="card mx-3" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title text-center">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title text-center">
+              <img height="60px" src="images/construtor.png" alt="imagem de um construtor">
+            </h5>
+            <p class="card-text">Contrua o seu futuro com nossa ajuda!</p>
           </div>
         </div>
         <div class="card mx-3" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title text-center">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title text-center">
+              <img height="60px" src="images/carreira.png" alt="imagem de uma cedula real" class="rounded-circle">
+            </h5>
+            <p class="card-text">Temos o plano de carreira perfeito para te levar ao sucesso!</p>
           </div>
         </div>
         <div class="card mx-3" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title text-center">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title text-center">
+              <img height="60px" src="images/happy.png" alt="imagem de um emoji feliz">
+            </h5>
+            <p class="card-text">Tá esperando mais o que? Inicie o curso de sua preferência sem ter que pagar nada!</p>
           </div>
+        </div>
+      </article>
+    </section>
+    <section id="section-more">
+      <article class="container text-light">
+        <div class="row justify-content-center pt-5">
+          <h2 class="pt-5 mt-3">Quer Mais?</h2>
+          <h3>Participe ativamente para o crescimento do projeto e receba conteúdos exclusivos!</h3>
+          <p class="h5 col-12 text-center mt-4">Digite seu e-mail:</p>
+          <form action="#" class="col-6 text-center">
+            <input type="email" class="form-control" placeholder="example@hotmail.com" required>
+            <button type="submit" class="btn btn-dark mt-3">Assinar!</button>
+          </form>
         </div>
       </article>
     </section>
