finalizacao do site jquery

--- a/jquery/Site Bootstrap-Jquery/categorias.html
+++ b/jquery/Site Bootstrap-Jquery/categorias.html
@@ -89,95 +89,54 @@
             </div>
         </div>
     </section>
-    <section class="py-5 my-5">
-      <article class="container">
-        <div class="row">
-          <div class="col-4 text-secondary">
-            <h4>Categorias</h4>
-            <p>Se torne mais ágil no seu trabalho!
-            <br>Evolua seu atendimento com técnicas de vendas e suporte ao cliente.
-            <br>Torne o seu trabalho ainda mais produtivo com metologias ágeis.
-            <br>Está na hora de ganhar mais visibilidade no mercado melhorando seu desempenho com o Excel.</p>
+    <section class="site-section mt-5 py-5">
+      <div class="container">
+        <div class="row element-animate" data-animate-effect="fadeInRight">
+          <div class="col-md-6 mb-5">
+            <img src="images/img_4.jpg" alt="Image placeholder" class="img-fluid">
           </div>
-          <div class="col-8">
-            <div class="row">
-              <a class="col-4">
-                <h4 class="text-center">Atendimento</h4>
-                <img src="images/img_1.png" alt="imagem do atendimento" class="img">
-                <span type="button" class="saiba-mais bg-dark text-light border p-2 rounded">Saiba mais</span>
-              </a>
-              <a class="col-4">
-                <h4 class="text-center">SCRUM</h4>
-                <img src="images/img_2.png" alt="imagem do excel" class="img">
-                <span type="button" class="saiba-mais bg-dark text-light border p-2 rounded">Saiba mais</span>
-              </a>
-              <a class="col-4">
-                <h4 class="text-center">Excel</h4>
-                <img src="images/img_3.png" alt="imagem de evolução" class="img mt-2">
-                <span type="button" class="saiba-mais bg-dark text-light border p-2 rounded">Saiba mais</span>
-              </a>
-            </div>
+          <div class="col-md-6 pl-md-5">
+            <h3>Lorem</h3>
+            <p class="lead">Ipsum Dolor</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam facere a excepturi quod impedit rerum ipsum totam incidunt, necessitatibus id veritatis maiores quos saepe dolore commodi magnam fugiat. Incidunt, omnis.</p>
+            <p>Nobis quae eaque facere architecto eligendi, voluptas quasi, blanditiis aperiam possimus inventore quis nam! Cupiditate necessitatibus, voluptatem excepturi placeat exercitationem quos vitae ut vero dolorem, provident sit odio porro facere.</p>
           </div>
         </div>
-      </article>
+      </div>
     </section>
-    <section class="container mb-5">
-      <h3 class="text-center text-dark">Diferenciais</h3>
-      <h6 class="text-center mb-5 text-dark">Porque deveria contar conosco?</h6>
-      <article class="row justify-content-center">
-        <div class="card mx-3" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title text-center">
-              <div class="fs-2 mb-3">
-                <img height="60px" src="images/foguete.png" alt="imagem de um foguete">
-              </div>
-            </h5>
-            <p class="card-text">Equipe voltada para o desenvolvimento dos treinantes.</p>
+    <!-- END section -->
+
+    <section class="pt-5 pb-5">
+      <div class="container">
+        <div class="row element-animate" data-animate-effect="fadeInRight">
+          <div class="col-md-6 mb-5">
+            <img src="images/img_3.jpg" alt="Image placeholder" class="img-fluid">
+          </div>
+          <div class="col-md-6 pl-md-5">
+            <h3>Lorem</h3>
+            <p class="lead">Ipsum Dolor</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam facere a excepturi quod impedit rerum ipsum totam incidunt, necessitatibus id veritatis maiores quos saepe dolore commodi magnam fugiat. Incidunt, omnis.</p>
+            <p>Nobis quae eaque facere architecto eligendi, voluptas quasi, blanditiis aperiam possimus inventore quis nam! Cupiditate necessitatibus, voluptatem excepturi placeat exercitationem quos vitae ut vero dolorem, provident sit odio porro facere.</p>
           </div>
         </div>
-        <div class="card mx-3" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title text-center">
-              <img height="60px" src="images/target.png" alt="imagem de um alvo">
-            </h5>
-            <p class="card-text">Foco total nas metas e objetivos.</p>
+      </div>
+    </section>
+    <!-- END section -->
+
+    <section class="pt-5 pb-5">
+      <div class="container">
+        <div class="row element-animate" data-animate-effect="fadeInRight">
+          <div class="col-md-6 mb-5">
+            <img src="images/img_2.jpg" alt="Image placeholder" class="img-fluid">
+          </div>
+          <div class="col-md-6 pl-md-5">
+            <h3>Lorem</h3>
+            <p class="lead">Ipsum Dolor</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam facere a excepturi quod impedit rerum ipsum totam incidunt, necessitatibus id veritatis maiores quos saepe dolore commodi magnam fugiat. Incidunt, omnis.</p>
+            <p>Nobis quae eaque facere architecto eligendi, voluptas quasi, blanditiis aperiam possimus inventore quis nam! Cupiditate necessitatibus, voluptatem excepturi placeat exercitationem quos vitae ut vero dolorem, provident sit odio porro facere.</p>
           </div>
         </div>
-        <div class="card mx-3" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title text-center">
-              <img height="60px" src="images/suporte.png" alt="imagem de um robo" class="rounded-circle">
-            </h5>
-            <p class="card-text">Suporte diponível fulltime, pronto para qualquer tipo de possiveis problemas!</p>
-          </div>
-        </div>
-      </article>
-      <article class="row mt-3 justify-content-center">
-        <div class="card mx-3" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title text-center">
-              <img height="60px" src="images/construtor.png" alt="imagem de um construtor">
-            </h5>
-            <p class="card-text">Contrua o seu futuro com nossa ajuda!</p>
-          </div>
-        </div>
-        <div class="card mx-3" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title text-center">
-              <img height="60px" src="images/carreira.png" alt="imagem de uma cedula real" class="rounded-circle">
-            </h5>
-            <p class="card-text">Temos o plano de carreira perfeito para te levar ao sucesso!</p>
-          </div>
-        </div>
-        <div class="card mx-3" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title text-center">
-              <img height="60px" src="images/happy.png" alt="imagem de um emoji feliz">
-            </h5>
-            <p class="card-text">Tá esperando mais o que? Inicie o curso de sua preferência sem ter que pagar nada!</p>
-          </div>
-        </div>
-      </article>
+      </div>
     </section>
     <section id="section-more" class="paroller" data-paroller-factor="0.3" data-paroller-type="background" 
      data-paroller-direction="vertical">
