--- a/bootstrap/Portifólio/index.html
+++ b/bootstrap/Portifólio/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Portifólio</title>
@@ -12,9 +13,9 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark px-4 fixed-top shadow" id="sideNav">
             <span class="d-none d-lg-block">
-                <img src="images/WhatsApp Image 2021-05-21 at 09.34.17.jpeg" class="rounded-circle img-profile" alt="Samuel">
+                <img src="images/perfil.jpeg" width="150" height="150" class="rounded-circle img-profile" alt="Samuel">
             </span>
-            <a class="navbar-brand" href="#sideNav">Samuel Nunes de Souza</a>
+            <a class="navbar-brand pl-4" href="#sideNav">Samuel Nunes de Souza</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -27,81 +28,81 @@
             </div>
           </nav>
     </header>
-    <main class="container-fluid px-4">
+    <main class="container-fluid px-5">
         <section class="section border-bottom" id="inicio">
-            <h2 class="mt-2 mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
-            <p class="indent">Numquam facilis hic autem dolorum exercitationem laudantium at veniam temporibus nam? Obcaecati eaque sit quisquam, quidem vel iure voluptatem aspernatur voluptatum perspiciatis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit blanditiis molestias at magni. Temporibus accusantium hic consectetur fugiat, error impedit facere doloribus optio, itaque quae nesciunt officiis qui tempora mollitia!</p>
-            <a href="#" class="btn btn-outline-dark my-4" role="button">Saiba Mais</a>
+            <h2 class="mt-2 mb-4">Bootstrap & Jquery</h2>
+            <p class="indent">Olá! Aqui você encontrará alguns projetos que criei para exercitar o uso do Bootstrap e do Jquery, inclusive esta página também faz parte deles! 😁</p>
+            <a href="#" class="btn btn-outline-dark my-4" role="button" data-target="#modalMore" data-toggle="modal">Saiba Mais</a>
         </section>
         <section class="section" id="trabalhos-recentes">
-            <h2 class="my-5">Trabalhos Recentes</h2>
+            <h2 class="my-5">Projetos Recentes</h2>
             <article class="row px-5">
                 <div class="card col-12 col-sm-6 m-3" style="width: 18rem;">
-                    <a href="#">
-                        <img class="card-img-top" src="images/fulls/01.jpg" alt="Card image cap">
+                    <a href="https://samuelnunesdev.github.io/bootstrap-jquery/bootstrap/Painel%20Dashboard/" target="_blank">
+                        <img class="card-img-top" src="images/dashboard.png" alt="Card image cap">
                     </a>
                     <div class="card-body">
-                        <p class="card-">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
-                        <p><small> Ut dolorem alias sed et perspiciatis officiis optio voluptatem porro, voluptate nemo natus eveniet ullam repellat fugit, enim magnam minus molestiae aliquam</small></p>
+                        <p class="card-">Template Dashboard</p>
+                        <p><small>Layout construído com bootstrap, fácil de implementar e customizar.</small></p>
                     </div>
                 </div>
                 <div class="card col-12 col-sm-6 m-3" style="width: 18rem;">
-                    <a href="#">
-                        <img class="card-img-top" src="images/fulls/02.jpg" alt="Card image cap">
+                    <a href="https://samuelnunesdev.github.io/bootstrap-jquery/bootstrap/Site%20Bootstrap/" target="_blank">
+                        <img class="card-img-top" src="images/site_bootstrap.png" alt="Card image cap">
                     </a>
                     <div class="card-body">
-                        <p class="card-">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
-                        <p><small> Ut dolorem alias sed et perspiciatis officiis optio voluptatem porro, voluptate nemo natus eveniet ullam repellat fugit, enim magnam minus molestiae aliquam</small></p>
+                        <p class="card-">Template Para Site de Treinamentos</p>
+                        <p><small>Layout construído com bootstrap, fácil de implementar e customizar.</small></p>
                     </div>
                 </div>
             </article>
             <article class="row px-5">
                 <div class="card col-12 col-sm-6 m-3" style="width: 18rem;">
-                    <a href="#">
-                        <img class="card-img-top" src="images/fulls/03.jpg" alt="Card image cap">
+                    <a href="https://samuelnunesdev.github.io/bootstrap-jquery/bootstrap/Site%20Bootstrap%202/" target="_blank">
+                        <img class="card-img-top" src="images/site_bootstrap_2.png" alt="Card image cap">
                     </a>
                     <div class="card-body">
-                        <p class="card-">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
-                        <p><small> Ut dolorem alias sed et perspiciatis officiis optio voluptatem porro, voluptate nemo natus eveniet ullam repellat fugit, enim magnam minus molestiae aliquam</small></p>
+                        <p class="card-">Template Para Site Corporativo</p>
+                        <p><small>Layout construído com bootstrap, fácil de implementar e customizar.</small></p>
                     </div>
                 </div>
                 <div class="card col-12 col-sm-6 m-3" style="width: 18rem;">
-                    <a href="#">
-                        <img class="card-img-top" src="images/fulls/04.jpg" alt="Card image cap">
+                    <a href="https://samuelnunesdev.github.io/bootstrap-jquery/jquery/galeria%20de%20imagens/">
+                        <img class="card-img-top" src="images/galeria_de_imagens.png" alt="Card image cap">
                     </a>
                     <div class="card-body">
-                        <p class="card-">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
-                        <p><small> Ut dolorem alias sed et perspiciatis officiis optio voluptatem porro, voluptate nemo natus eveniet ullam repellat fugit, enim magnam minus molestiae aliquam</small></p>
+                        <p class="card-">Galeria de Imagens</p>
+                        <p><small>Visualizador de imagens com animação fade, feito com jquery.</small></p>
                     </div>
                 </div>
                 </article>
                 <article class="row px-5 border-bottom pb-3">
                 <div class="card col-12 col-sm-6 m-3" style="width: 18rem;">
-                    <a href="#">
-                        <img class="card-img-top" src="images/fulls/05.jpg" alt="Card image cap">
+                    <a href="https://samuelnunesdev.github.io/bootstrap-jquery/jquery/lista%20de%20tarefas/">
+                        <img class="card-img-top" src="images/lista_de_tarefas.png" alt="Card image cap">
                     </a>
                     <div class="card-body">
-                        <p class="card-">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
-                        <p><small> Ut dolorem alias sed et perspiciatis officiis optio voluptatem porro, voluptate nemo natus eveniet ullam repellat fugit, enim magnam minus molestiae aliquam</small></p>
+                        <p class="card-">Lista de Tarefas</p>
+                        <p><small>Lista de tarefas (clássica) dinamica, feito com jquery.</small></p>
                     </div>
                 </div>
                 <div class="card col-12 col-sm-6 m-3" style="width: 18rem;">
-                    <a href="#">
-                        <img class="card-img-top" src="images/fulls/06.jpg" alt="Card image cap">
+                    <a href="https://samuelnunesdev.github.io/bootstrap-jquery/jquery/Site%20Bootstrap-Jquery/">
+                        <img class="card-img-top" src="images/site_jquery.png" alt="Card image cap">
                     </a>
                     <div class="card-body">
-                        <p class="card-">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
-                        <p><small> Ut dolorem alias sed et perspiciatis officiis optio voluptatem porro, voluptate nemo natus eveniet ullam repellat fugit, enim magnam minus molestiae aliquam</small></p>
+                        <p class="card-">Template Para Site de Treinamentos</p>
+                        <p><small>Neste site contém alguns efeitos parallax e animações css, feito com jquery.</small></p>
                     </div>
                 </div>
             </article>
         </section>
         <section class="section" id="entre-em-contato">
             <h2 class="my-4">Entre em Contato</h2>
-            <p class="indent">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam unde dolore iusto modi. Dolore sapiente totam quae eos ipsam sunt, doloribus eligendi iure adipisci ullam neque perferendis maiores animi voluptatibus!</p>
+            <p class="indent">Me envie uma mensagem no whatsapp, se for de sua preferência irei te responder via e-mail ✉️</p>
             <article class="row">
                     <div class="col-12 col-md-9">
-                        <form>
+                        <form method="GET" action="https://wa.me/5538988451471" target="_blank">
                             <div class="form-row row">
                               <div class="col-12 col-sm-6 my-2">
                                 <label for="nome">Nome</label>
@@ -113,16 +114,16 @@
                               </div>
                               <div class="col-12 my-2">
                                 <label for="mensagem">Mensagem</label>
-                                <textarea type="text" class="form-control" id="mensagem" placeholder="Mensagem" rows="5"></textarea>
-                                <input class="btn btn-outline-primary mt-3" type="submit" value="Enviar Mensagem">
+                                <textarea type="text" class="form-control" id="mensagem" name="text" placeholder="Mensagem" rows="5"></textarea>
+                                <input class="btn btn-outline-primary mt-3" id="formZap" type="submit" value="Enviar Mensagem">
                               </div>
                             </div>
                         </form>
                     </div>
                 <aside class="col-12 col-md-3 px-md-0 mt-3 mt-md-4">
                     <address>
-                        <p><span>Endereço: </span>1234 Somewhere Rd. Nashville, TN 00000 United States</p>
-                        <p><span>Telefone: </span>4002-8922</p>
+                        <p><span>Endereço: </span>Montes Claros - MG, Brasil</p>
+                        <p><span>Telefone: </span>(38) 98845-1471</p>
                         <p><span>E-mail: </span>sammoc11@hotmail.com</p>
                     </address>
                 </aside>
@@ -130,22 +131,40 @@
         </section>
         
     </main>
+    <div class="modal fade" id="modalMore" tabindex="-1" role="dialog" aria-labelledby="modalMoreLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modalMoreLabel">Sobre meus projetos...</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Todos os projetos contidos nesta página estão hospedados no github pages, os mesmos pertencem a um único repositório. Voce pode acessar meu Github completo clicando <a href="https://github.com/SamuelNunesDev/" class="link" target="_blank"> aqui 🔗.</a></p>
+              <p>Tem algum projeto em mente e precisa de um desenvolvedor? Conte comigo! Contate-me via whatsapp clicando no ícone ao lado -> <a href="https://wa.me/5538988451471" target="_blank"><img src="images/whatsapp-active.png" alt="whatsapp icon"></a></p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
     <footer>
-        <ul class="nav justify-content-end mb-2 px-3">
+        <ul class="nav justify-content-end mb-2 px-4">
             <li class="nav-item mx-2">
-                <a href="#">
+                <a href="https://www.facebook.com/Samuel.Nunes.de.Souza2/" target="_blank">
                     <img src="images/facebook.png" alt="logo do facebook">
                 </a>
             </li>
             <li class="nav-item">
-                <a href="#">
+                <a href="https://github.com/SamuelNunesDev/" target="_blank">
                     <img src="images/github.png" alt="logo do github">
                 </a>
             </li>
         </ul>
         <ul class="nav justify-content-end px-3">
-            <li class="nav-item mx-3">&copy; Untitled</li>
-            <li class="nav-item">Design: <a href="">HTML5Up</a></li>
+            <li class="nav-item mx-3">&copy; Todos os direitos reservados</li>
         </ul>
     </footer>
     <script src="js/jquery.min.js"></script>
@@ -173,6 +192,14 @@
                     $('#btnInicio, #trabalhos, #contato').removeClass('active')
                     $('#contato').addClass('active')
                 }
+            })
+            $('#formZap').on('click', function(e) {
+                e.preventDefault()
+                let nome = $('#nome').val()
+                let email = $('#email').val()
+                let msg = $('#mensagem').val()
+                $('#mensagem').val(`${msg} \nby: ${nome} \nemail: ${email}`)
+                $('form').submit()
             })
         })
     </script>
