--- a/bootstrap/Site Bootstrap/index.html
+++ b/bootstrap/Site Bootstrap/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Treinamento HO</title>
 </head>
@@ -68,6 +68,7 @@
           <p class="align-items-center m-0">Desenvolvido por Samuel Nunes &copy; 2021</p>
         </footer>
   </main>
-  <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
