--- a/bootstrap/Site Bootstrap 2/index.html
+++ b/bootstrap/Site Bootstrap 2/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="../node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <title>Site Boostrap</title>
+    <title>Site Bootstrap</title>
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top py-0 shadow">
+    <nav class="navbar navbar-expand-lg navbar-light px-0 fixed-top py-0 shadow">
       <a class="navbar-brand col-3 text-light py-3 px-4" href="#"><strong>Infusion</strong></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -215,5 +215,7 @@
             </div>
         </footer>
     </main>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
