--- a/jquery/Site Bootstrap-Jquery/categorias.html
+++ b/jquery/Site Bootstrap-Jquery/categorias.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/animate.css">
-    <link rel="stylesheet" href="../../node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="css/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Treinamento HO</title>
 </head>
@@ -167,9 +167,9 @@
         </p>
       </div>
     </footer>
-    <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../../node_modules/waypoints/lib/jquery.waypoints.min.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/jquery.waypoints.min.js"></script>
     <script src="./js/jquery.paroller.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
