--- a/jquery/lista de tarefas/index.html
+++ b/jquery/lista de tarefas/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../bootstrap/node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Lista de Tarefas</title>
 </head>
 <body>
@@ -56,8 +56,8 @@
               </div>
         </section>
     </main>
-    <script src="../jquery-3.6.0.min.js"></script>
-    <script src="../../bootstrap/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>   
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>   
     <script>
         $(function() {
             let input_add = $('#nova-tarefa')
